Fri Dec 28 11:17:47 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* proc.c (method_eq): fix the documentation to refer to owner.
	  [ruby-core:51105] [Bug #7613]

	* test/ruby/test_method.rb (test_alias_onwer): new test to confirm
	  that `a == b' returns false if owners of a and b are different.

Fri Dec 28 07:07:43 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* def/id.def: use split(/^/) instead of String#lines to support
	  Ruby 1.8.5 as BASERUBY.

Thu Dec 27 21:56:56 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* variable.c (rb_mod_remove_const): fix segv caused by r38558.

Tue Dec 28 01:13:48 2012  James Edward Gray II  <james@graysoftinc.com>

	* lib/csv.rb: Added more Hash methods to CSV::Row.

Thu Dec 27 23:27:15 2012  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/ruby-lex.rb: make lex_state to EXPR_END when next token
	  is an operator after SYMBEG [Bug #6378].

Thu Dec 27 21:30:21 2012  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/ruby-lex.rb: allow to handle recursive heredocs on
	  irb[Bug #5648].

Thu Dec 27 20:45:29 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* ext/stringio/stringio.c (strio_getline): fix not to raise TypeError
	  when limit is nil.
	  [Bug #7232] [ruby-core:48531]

	* test/stringio/test_stringio.rb: a test for above.

Thu Dec 27 21:08:23 2012  Charlie Somerville  <charlie@charliesomerville.com>

	* vm_core.h (VM_DEFINECLASS_TYPE): explicit cast to enum type to avoid 64->32
	  shorten warning

Thu Dec 27 20:11:29 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* ext/stringio/stringio.c (strio_ungetc): raise IOError instead of RuntimeError
	  if the string is frozen.
	  [Bug #7231] [ruby-core:48530]

	* ext/stringio/stringio.c (strio_ungetbyte): ditto.

	* test/stringio/test_stringio.rb: a test for above.

Wed Dec 26 23:55:18 2012  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/context.rb: fix IRB::Inspector#keys_with_inspector [Bug #7598]

Wed Dec 26 23:26:15 2012  Keiju Ishitsuka  <keiju@ishitsuka.com>
